--- a/Lib/Neon.Kube/Resources/Helm/loki/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/loki/values.yaml
@@ -47,6 +47,7 @@ tracing:
 config:
   auth_enabled: false
   ingester:
+    chunk_encoding: snappy
     chunk_idle_period: 3m
     chunk_block_size: 262144
     chunk_retain_period: 1m
