--- a/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
+++ b/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
@@ -8,9 +8,11 @@
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
     <Product>neonLIBRARY</Product>
-    <Description>Includes the [neon-model] client which can be referenced from your project build targets as required.
+    <Description>
+      Includes the [neon-model] client which can be referenced from your project build targets as required.
 
-NOTE: You must have a .NET Core 3.1 SDK or runtime installed for this to work because the client is built on this SDK.</Description>
+      NOTE: You must have a .NET Core 3.1 SDK or runtime installed for this to work because the client is built on this SDK.
+    </Description>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageIcon>nuget-icon.png</PackageIcon>
@@ -22,6 +24,7 @@ NOTE: You must have a .NET Core 3.1 SDK or runtime installed for this to work be
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
     <Configurations>Debug;Release;CodeDoc</Configurations>
+    <DevelopmentDependency>true</DevelopmentDependency>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -37,6 +40,11 @@ NOTE: You must have a .NET Core 3.1 SDK or runtime installed for this to work be
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="neon-modelgen\linux-x64\createdump" />
+    <None Remove="readme.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
@@ -45,14 +53,39 @@ NOTE: You must have a .NET Core 3.1 SDK or runtime installed for this to work be
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </Content>
+    <Content Include="readme.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+
+    <!--
+    Note that we're not using the glob [**] pattern in the <Content/> tags below
+    to avoid including any localization folders to reduce the package size.
+    -->
+
+    <Content Include="neon-modelgen\linux-x64\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>true</CopyToPublishDirectory>
+    </Content>
+    <Content Include="neon-modelgen\osx-x64\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>true</CopyToPublishDirectory>
+    </Content>
+    <Content Include="neon-modelgen\win-x64\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>true</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
   </ItemGroup>
 
-  <!--<Target Name="ModelGen" BeforeTargets="BeforeBuild">
-    <Exec Command="copy &quot;%NF_ROOT%\Tools\neon-model\bin\Debug\netcoreapp3.1\*.*&quot; &quot;$(ProjectDir)neon-model&quot;" />
-  </Target>-->
+  <!-- 
+  We're going to publish the [neon-modelgen] binaries for [linux-x64], [osx-x64],
+  and [win-x64] to the [neon-modelgen] folder of this project.
+  
+  This assumes that this project has an explicit build dependency on the 
+  [Tools/neon-modelgen] project.
+  -->
 
 </Project>
