--- a/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
@@ -16,7 +16,7 @@ expose:
     # The tls certificate can be generated manually or by cert manager
     # 3) none: configure no tls certificate for the ingress. If the default
     # tls certificate is configured in the ingress controller, choose this option
-    certSource: auto
+    certSource: secret
     auto:
       # The common name used to generate the certificate, it's necessary
       # when the type isn't "ingress"
@@ -25,12 +25,12 @@ expose:
       # The name of secret which contains keys named:
       # "tls.crt" - the certificate
       # "tls.key" - the private key
-      secretName: ""
+      secretName: "neon-registry-harbor-internal"
       # The name of secret which contains keys named:
       # "tls.crt" - the certificate
       # "tls.key" - the private key
       # Only needed when the "expose.type" is "ingress".
-      notarySecretName: ""
+      notarySecretName: "neon-registry-harbor-internal"
   ingress:
     hosts:
       core: neon-registry.node.local
