[refactor]: Removed Neon.XenServer depedency on Neon.Kube (this was a hack and mistake)

--- a/Lib/Neon.XenServer/Neon.XenServer.csproj
+++ b/Lib/Neon.XenServer/Neon.XenServer.csproj
@@ -74,7 +74,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
-    <ProjectReference Include="..\Neon.Kube\Neon.Kube.csproj" />
+    <ProjectReference Include="..\Neon.SSH.NET\Neon.SSH.NET.csproj" />
   </ItemGroup>
 
   <ItemGroup>
