Neon.Kube.* libraries now target [netcoreapp3.1]

--- a/Lib/Neon.Cassandra/Neon.Cassandra.csproj
+++ b/Lib/Neon.Cassandra/Neon.Cassandra.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Library</OutputType>
     <LangVersion>latest</LangVersion>
     <Version>2.11.1</Version>
     <Authors>neonFORGE Team</Authors>
