--- a/Lib/Neon.Docker/Neon.Docker.csproj
+++ b/Lib/Neon.Docker/Neon.Docker.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Library</OutputType>
     <RootNamespace>Neon.Docker</RootNamespace>
     <Version>2.11.1</Version>
     <Authors>neonFORGE Team</Authors>
