--- a/Lib/Neon.Kube.Services/Neon.Kube.Services.csproj
+++ b/Lib/Neon.Kube.Services/Neon.Kube.Services.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>Library</OutputType>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Version>10000.0.298-dev-marcus</Version>
