--- a/Lib/Neon.Xunit.Couchbase/Neon.Xunit.Couchbase.csproj
+++ b/Lib/Neon.Xunit.Couchbase/Neon.Xunit.Couchbase.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Library</OutputType>
     <Version>2.11.1</Version>
     <Authors>neonFORGE Team</Authors>
     <Company>neonFORGE LLC</Company>
