--- a/Lib/Neon.YugaByte/Neon.YugaByte.csproj
+++ b/Lib/Neon.YugaByte/Neon.YugaByte.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Library</OutputType>
     <LangVersion>latest</LangVersion>
     <Version>2.11.1</Version>
     <Authors>neonFORGE Team</Authors>
