--- a/Services/neon-identity-operator/neon-identity-operator.csproj
+++ b/Services/neon-identity-operator/neon-identity-operator.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>NeonIdentityOperator</RootNamespace>
     <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
