--- a/Lib/Neon.Kube.Azure/Neon.Kube.Azure.csproj
+++ b/Lib/Neon.Kube.Azure/Neon.Kube.Azure.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
     <LangVersion>latest</LangVersion>
     <Version>2.10.0-internal</Version>
