--- a/Services/neon-cluster-manager/neon-cluster-manager.csproj
+++ b/Services/neon-cluster-manager/neon-cluster-manager.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
+    <IsPackable>false</IsPackable>
+    <LangVersion>latest</LangVersion>
     <RootNamespace>NeonClusterManager</RootNamespace>
     <LangVersion>latest</LangVersion>
     <ServerGarbageCollection>true</ServerGarbageCollection>
