--- a/Lib/Neon.Deployment/Neon.Deployment.csproj
+++ b/Lib/Neon.Deployment/Neon.Deployment.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
     <RootNamespace>Neon.Deployment</RootNamespace>
-    <Version>2.11.1</Version>
+    <Version>2.12.0-alpha</Version>
     <Company>neonFORGE LLC</Company>
     <Authors>neonFORGE Team</Authors>
     <Description>CI/CD utility classes</Description>
