--- a/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
+++ b/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NETFRAMEWORK</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -30,14 +30,14 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NETFRAMEWORK</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'CodeDoc|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\CodeDoc\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NETFRAMEWORK</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -252,6 +252,9 @@
     </Compile>
     <Compile Include="..\Test.Neon.Common\Collections\Test_Bits.cs">
       <Link>Collections\Test_Bits.cs</Link>
+    </Compile>
+    <Compile Include="..\Test.Neon.Common\Collections\Test_ObjectDictionary.cs">
+      <Link>Collections\Test_ObjectDictionary.cs</Link>
     </Compile>
     <Compile Include="..\Test.Neon.Common\Common\Test_Block.cs">
       <Link>Common\Test_Block.cs</Link>
@@ -518,6 +521,9 @@
     <EmbeddedResource Include="IORes\Resources\Folder2\TextFile7.txt" />
     <EmbeddedResource Include="IORes\Resources\TextFile1.txt" />
     <EmbeddedResource Include="IORes\Resources\TextFile2.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
