--- a/Test/Test.Neon.Deployment/Test.Neon.Deployment.csproj
+++ b/Test/Test.Neon.Deployment/Test.Neon.Deployment.csproj
@@ -11,6 +11,21 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningsAsErrors>;NU1605</WarningsAsErrors>
+    <NoWarn>1701;1702;xUnit1026</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <WarningsAsErrors>;NU1605;xUnit1006</WarningsAsErrors>
+    <NoWarn>1701;1702;xUnit1026</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
+    <WarningsAsErrors>;NU1605;xUnit1006</WarningsAsErrors>
+    <NoWarn>1701;1702;xUnit1026</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
