--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,9 @@ Go/**/__debug_bin
 /Lib/Neon.ModelGenerator/linux-x64/**
 /Lib/Neon.ModelGenerator/osx-x64/**
 /Lib/Neon.ModelGenerator/win-x64/**
+
+############################
+### Images               ###
+############################
+
+/Images/_common/**
