--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -46,4 +46,15 @@
     <ProjectReference Include="..\Neon.Kube\Neon.Kube.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\nuget-icon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+
 </Project>
