[image]: Fixed image builds: missing [_common] folder

--- a/Images/Images.csproj
+++ b/Images/Images.csproj
@@ -6,4 +6,8 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="_common\" />
+  </ItemGroup>
+
 </Project>
