--- a/Images/neon-allow-testing/Dockerfile
+++ b/Images/neon-allow-testing/Dockerfile
@@ -15,30 +15,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM        mcr.microsoft.com/dotnet/aspnet:3.1
+# This base image deploys a simple container/or service used
+# for cluster unit tests.
+#
+# ARGUMENTS:
+#
+#   ORGANIZATION    - The Docker Hub organization
+#   BRANCH          - The current GitHub branch
+
+ARG         ORGANIZATION
+ARG         BRANCH
+FROM        alpine:latest
 MAINTAINER  jeff@lilltek.com
 STOPSIGNAL  SIGTERM
-ARG         APPNAME
 
-# Add the application files in two layers.  The first will contain the dependencies
-# and the second will contain the application files.  This should result in more
-# efficient images because depdencies tend to be more stable than application files.
-#
-# Note that we used the [core-layers] tool to separate the binary files before
-# building the container.
-
-# Dependencies
-
-COPY bin/__dep              /usr/bin/$APPNAME.dotnet/
-RUN echo ** NEW LAYER **
-
-# App files.
-
-COPY bin/__app              /usr/bin/$APPNAME.dotnet/
 COPY docker-entrypoint.sh   /
-
-RUN chmod 700 /docker-entrypoint.sh \
-    && echo "exec dotnet /usr/bin/$APPNAME.dotnet/$APPNAME.dll \"\$@\"" >> /usr/bin/$APPNAME \
-    && chmod 770 /usr/bin/$APPNAME
-
+RUN chmod 777 /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
