renamed cluster manager to cluster operator

--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -410,14 +410,10 @@
     <None Remove="Resources\Helm\minio\templates\_helpers.tpl" />
     <None Remove="Resources\Helm\minio\templates\_helper_create_bucket.txt" />
     <None Remove="Resources\Helm\minio\values.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-manager\.helmignore" />
-    <None Remove="Resources\Helm\neon-cluster-manager\Chart.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-manager\templates\cluster-role-binding-template.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-manager\templates\cluster-role-template.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-manager\templates\deployment.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-manager\templates\serviceaccount.yaml" />
-    <None Remove="Resources\Helm\neon-cluster-manager\templates\_helpers.tpl" />
-    <None Remove="Resources\Helm\neon-cluster-manager\values.yaml" />
+    <None Remove="Resources\Helm\neon-cluster-operator\.helmignore" />
+    <None Remove="Resources\Helm\neon-cluster-operator\Chart.yaml" />
+    <None Remove="Resources\Helm\neon-cluster-operator\templates\_helpers.tpl" />
+    <None Remove="Resources\Helm\neon-cluster-operator\values.yaml" />
     <None Remove="Resources\Helm\nfs\.helmignore" />
     <None Remove="Resources\Helm\nfs\Chart.yaml" />
     <None Remove="Resources\Helm\nfs\OWNERS._" />
@@ -860,6 +856,9 @@
     <EmbeddedResource Include="Resources\Helm\minio\templates\_helpers.tpl" />
     <EmbeddedResource Include="Resources\Helm\minio\templates\_helper_create_bucket.txt" />
     <EmbeddedResource Include="Resources\Helm\minio\values.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\.helmignore" />
+    <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\Chart.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\values.yaml" />
     <EmbeddedResource Include="Resources\Helm\openebs-cstor-operator\.helmignore" />
     <EmbeddedResource Include="Resources\Helm\openebs-cstor-operator\Chart.yaml" />
     <EmbeddedResource Include="Resources\Helm\openebs-cstor-operator\crds\cstorbackup.yaml" />
@@ -1350,14 +1349,11 @@
     <EmbeddedResource Include="Resources\Helm\metricbeat\templates\serviceaccount.yaml" />
     <EmbeddedResource Include="Resources\Helm\metricbeat\templates\_helpers.tpl" />
     <EmbeddedResource Include="Resources\Helm\metricbeat\values.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-manager\.helmignore" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-manager\Chart.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-manager\templates\cluster-role-binding-template.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-manager\templates\cluster-role-template.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-manager\templates\deployment.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-manager\templates\serviceaccount.yaml" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-manager\templates\_helpers.tpl" />
-    <EmbeddedResource Include="Resources\Helm\neon-cluster-manager\values.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\templates\cluster-role-binding-template.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\templates\cluster-role-template.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\templates\deployment.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\templates\serviceaccount.yaml" />
+    <EmbeddedResource Include="Resources\Helm\neon-cluster-operator\templates\_helpers.tpl" />
     <EmbeddedResource Include="Resources\Helm\nfs\.helmignore" />
     <EmbeddedResource Include="Resources\Helm\nfs\Chart.yaml" />
     <EmbeddedResource Include="Resources\Helm\nfs\OWNERS._" />
