--- a/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/templates/cluster-role-binding-template.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/templates/cluster-role-binding-template.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: neon-cluster-manager
+  name: neon-cluster-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: neon-cluster-manager
+  name: neon-cluster-operator
 subjects:
 - kind: ServiceAccount
-  name: neon-cluster-manager
+  name: neon-cluster-operator
   namespace: neon-system
