--- a/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/templates/serviceaccount.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/templates/serviceaccount.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: neon-cluster-manager
+  name: neon-cluster-operator
   namespace: neon-system
