--- a/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-cluster-operator/values.yaml
@@ -1,4 +1,4 @@
-# Default values for cluster-manager.
+# Default values for cluster-operator.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   organization: neon-registry.node.local
-  repository: neon-cluster-manager
+  repository: neon-cluster-operator
   tag: neonkube-0.1.0-alpha
   pullPolicy: IfNotPresent
 
